Перенесено css код з css файла в scss, зібранно у групи

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>WebStudio</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles/modern-normalize.css">
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
+    <!-- <link rel="stylesheet" href="./styles/styles.css"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,7 +58,7 @@
             <div class="container">
                 <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
 
-                <button class="hero__btn btn primary" type="button" data-modal-open>Замовити послугу</button>
+                <button class="hero__btn primary btn" type="button" data-modal-open>Замовити послугу</button>
             </div>
         </section>
 
@@ -338,7 +339,7 @@
         <div class="container foot-add">
 
             <div class="address-thomb">
-                <a class="logo link" href="./index.html"><span class="alogo__accent">Web</span>Studio</a>
+                <a class="logo logo--white link" href="./index.html"><span class="logo__accent">Web</span>Studio</a>
 
                 <address class="address">
                     <ul class="address__list">
