--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
     <link rel="stylesheet" href="./styles/modern-normalize.css">
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
+    <!-- <link rel="stylesheet" href="./styles/styles.css"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet"
@@ -299,7 +300,7 @@
                         <label>
                             <input class="send__input" type="email" name="send" placeholder="E-mail">
                         </label>
-                        <button class="send__btn btn primary" type="submit">
+                        <button class="send__btn primary btn" type="submit">
                             Підписатися
                             <svg class="send__icon" width="24" height="24">
                                 <use href="./imeges/icons.svg#send"></use>
